<resources>
    <string name="app_name">LoginApp</string>
    <string name="firebase_image">image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="status">status</string>
    <string name="login_with_google">Already login with google</string>
    <string name="login_with_email">Already login with email</string>
    <string name="web_client_id">849673531518-l3ttbaip47e6qpqnbd8lsdnqt2sh6bc1.apps.googleusercontent.com</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="verify">Verify</string>
    <string name="facebook_app_id">462036105460802</string>
    <string name="fb_login_protocol_scheme">fb462036105460802</string>
    <string name="login_email">Login with email</string>
    <string name="register_with_email">Register with email</string>
    <string name="firestore">Firestore</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="read_firebase_with_calling_method">Read Data with Calling Method</string>
    <string name="call_refresh_method">call refresh method</string>
    <string name="read_data_realtime">Read data realtime</string>
</resources>